add tests and recovery password